--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation "org.junit.jupiter:junit-jupiter"
+    testImplementation "org.assertj:assertj-core"
 }
 test {
     useJUnitPlatform()
